[package]
name = "mutify"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/mutify"
description = """
Macro for coercing a `mut var: T` or `var: &mut T` into a `&mut T`.
"""
keywords = ["mut", "coerce", "macro"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
